Changes for 1.8.5rc1

 - [ZBX-2913] fixed timeout handling in processing of web.page.* checks (sasha)
 - [ZBX-3176] removed navigation dropdown from applications screen (Vedmak)
 - [ZBX-3494] added database monitor items to the queue calculation (asaveljevs)
 - [ZBX-3454] fixed clearing item edited using by Trigger-wizard (Vlad)
 - [ZBX-3481] fixed massAdd for applications (KB)
 - [ZBX-3480] fixed possible crash of server after shutdown of ORACLE server (Sasha)
 - [ZBX-3457] in triggers Wizard, add more that 26 symbols with symbols dublicate (Vlad)
 - [ZBX-983] fixed error when update trigger (Vedmak)
 - [ZBX-974] recompress some images with pngcrush (Richlv)
 - [ZBX-3446] fixed possible hang of pollers - added timeout handler for external scripts (Sasha)
 - [ZBX-1690] fixed undefined index when create action with name that already exist (Vedmak)
 - [ZBX-3461] fixed names of IPMI pollers in debug output and the number of items they take (asaveljevs)
 - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
 - [ZBX-3138] fixed bug when disabling application, webitems were disabled too (Vedmak)
 - [ZBX-2951] made interval hidden for trapper items (Vedmak)
 - [ZBX-2867] changed order of "Discovery" and "IT services" in configuration menu (Vemdak)
 - [ZBX-3460] forbid saving host with enabled ipmi but without ipmi address (Vedmak)
 - [ZBX-3047] fixed zapcat compatibility for trigger expressions (Aly,Sasha,asaveljevs)
 - [ZBX-2912] added check for valid UTF-8 characters in the incoming data (Sasha)
 - [ZBX-1346] add more user parameter examples (Richlv)
 - [ZBX-2922] changed log level from warning to debug for some messages (Sasha)
 - [ZBX-3440] Added pagination to slide and discovery configuration (KB)
 - [ZBX-3433] fixed removing deleted passive proxies from queue (Sasha)
 - [ZBX-416] fixed PostgreSQL errors in configuration sender module when using DM setup (Sasha)